--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   </head>
 
-  <body class="Top">
+  <body class="Top col-xs-12">
 
     <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
       <a class="navbar-brand">
@@ -27,13 +27,12 @@
           <a class="navbar-brand navbar-inverse" href="index.html"><b>Welcome</b></a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="trainingresult.html" style="color:Orange;"><b>Training Result</b></a></li>
-          <li><a href="https://github.com/liuyuhanalex/Deep-reinforcement-learning" style="color:Violet;"><b>Github</b></a></li>
+          <li><a href="https://github.com/liuyuhanalex/Speech-Synthesis" style="color:Violet;"><b>Github</b></a></li>
         </ul>
       </div>
     </nav>
 
-    <div class="container" id="Begin">
+    <div class="container" id="Begin" class="col-xs-12">
       <h1 id="Title">Singing synthesis</h1>
 
       <div class="page-header">
@@ -41,11 +40,11 @@
       </div>
 
       <div class="container">
-        <h2>Vocaloid使用方法</h2>
+        <h3>Vocaloid使用方法</h3>
         <video  controls width="640">
           <source src="source/vocaloid.webm" type="video/webm">
         </video>
-        <h2>Vocaloid合成效果</h2>
+        <h3>Vocaloid合成效果</h3>
         <video  controls width="640">
           <source src="source/vocaloidresult.webm" type="video/webm">
         </video>
@@ -58,9 +57,6 @@
       <div class="page-header">
         <h1>WaveNet<small></small></h1>
       </div>
-      <ol>
-        <li><h3>论文原文</h3></li>
-      </ol>
 
       <h3>1.论文原文</h3>
       <a href="wavenet.pdf"><h3>wavenet.pdf</h3></a>
