Add more thesis

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h1 id="Title">Singing synthesis</h1>
 
       <div class="page-header">
-        <h1>Concatenation synthesis<small>连接合成</small></h1>
+        <h1>1.Concatenation synthesis<small>连接合成</small></h1>
       </div>
 
       <div class="container">
@@ -51,18 +51,51 @@
       </div>
 
       <div class="page-header">
-        <h1>Statistical parametric synthesis<small>参数合成</small></h1>
+        <h1>2.Statistical parametric synthesis<small>参数合成</small></h1>
       </div>
-        <h2>An HMM-based Singing Voice Synthesis System</h3>
-          <h3>1.论文原文
+
+        <img src="source/parameter.PNG" width="640">
+
+        <h2>(1)An HMM-based Singing Voice Synthesis System<small>基于马尔可夫模型的歌声合成</small></h2>
+          <h3 style="text-indent:1em">1.论文原文
             <a href="hmm.pdf">An HMM-based Singing Voice Synthesis System</a>
           </h3>
-          <h3>2.基本结构</h3>
+          <h3 style="text-indent:1em">2.基本结构</h3>
           <img src="source/hmm.PNG">
 
+        <h2>(2)Sinsy-HMM/Sinsy-DNN</h2>
+        <h3 style="text-indent:1em">1.网址链接
+          <a href="http://www.sinsy.jp/">Link</a>
+        </h3>
+
+        <h2>(3)Parametric Singing Synthesizer Based on Wavenet<small>基于Wavenet的参数歌声合成</small></h2>
+
+          <h3 style="text-indent:1em">1.论文原文
+            <a href="wavenetplus.pdf">A neural parametric singing synthesizer</a>
+          </h3>
+
+          <h3 style="text-indent:1em">2.官网Demo
+            <a href="https://mtg.github.io/singing-synthesis-demos/">NPSS</a>
+          </h3>
+
+          <h3 style="text-indent:1em">3.Presentation视频
+            <a href="https://www.youtube.com/watch?v=ie5CJW8DeaY">Youtube Link</a>
+          </h3>
+
+          <h3 style="text-indent:1em">4.不完全实现
+            <a href="https://github.com/Mu-Y/SynthSing">Github Link</a>
+          </h3>
+
+          <h3 style="text-indent:1em">5.结构及算法</h3>
+          <h4 style="text-indent:2em"><1>总体模型</h4>
+            <img src="source/system.PNG" width="640">
+          <h4 style="text-indent:2em"><2>Timing Model</h4>
+            <img src="source/timingmodel.PNG" width="740">
+          <h4 style="text-indent:2em"><3>Timbre Model</h4>
+            <img src="source/timbremodel.PNG" width="640">
 
       <div class="page-header">
-        <h1>WaveNet<small></small></h1>
+        <h1>3.WaveNet<small></small></h1>
       </div>
 
       <h3>1.论文原文
@@ -81,22 +114,6 @@
       </h3>
 
       <h3>4.算法部分重点
-      </h3>
-
-      <div class="page-header">
-        <h1>Parametric Singing Synthesizer Based on Wavenet<small>基于Wavenet的参数歌声合成</small></h1>
-      </div>
-
-      <h3>1.论文原文
-        <a href="wavenetplus.pdf">A neural parametric singing synthesizer</a>
-      </h3>
-
-      <h3>2.官网Demo
-        <a href="https://mtg.github.io/singing-synthesis-demos/">NPSS</a>
-      </h3>
-
-      <h3>3.不完全实现
-        <a href="https://github.com/Mu-Y/SynthSing">Github Link</a>
       </h3>
 
       <div class="page-header">
