--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
       <h4 style="text-indent:1em"><3>使用了类似PixelCNN的Gated activation模块</h4>
         <img src="source/gate.PNG" width="640">
         <img src="source/gatemodel.PNG" width="640">
+      <h4 style="text-indent:1em"><4>参数wavenet歌唱合成模型与原始wavenet对比</h4>
+          <img src="source/pwavenet.PNG" width="640">
 
 
 
@@ -176,7 +178,7 @@
             <i class="" style="width:30px"> </i>Worcester, MA | 01609-2280<br>
           </div>
           <div class="w3-col m6 w3-large w3-margin-bottom">
-            <i class="fa fa-envelope" style="width:30px"> </i>Yuhan Liu: yliu26@wpi.edu<br>
+            <i class="fa fa-envelope" style="width:30px"> </i>Email: yliu26@wpi.edu<br>
           </div>
         </div>
       </div>
