--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
               <source src="source/wozhiwoxin.webm" type="video/webm">
             </video>
 
+      <h2>(5)GANS</h2>
+          <h3 style="text-indent:1em">1.论文原文
+            <a href="GAN1.pdf"><1>Statistical Parametric Speech Synthesis Incorporation Generative Adversial Networks</a><br>
+            <a href="GAN2.pdf"><2>Statistical Parametric Speech Synthesis Using Generative Adversarial Networks Under A Multi-Task Learning Framework</a>
+          </h3>
+          <h3 style="text-indent:1em">2.Python实现，开源可用
+            <a href="https://github.com/r9y9/gantts">Github Link</a>
+          </h3>
+
       <div class="page-header">
         <h1>3.WaveNet<small></small></h1>
       </div>
@@ -160,6 +169,10 @@
 
       <h2>(2)NoiseGenerators
         <a href="https://github.com/mmorise/NoiseGenerators">Github Link</a>
+      </h2>
+
+      <h2>(3)Waveform to Spectrogram
+        <a href="http://arss.sourceforge.net/examples.shtml">ARSS Link</a>
       </h2>
 
 
