Add gansystem picture

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
           <h3 style="text-indent:1em">2.Python实现，开源可用
             <a href="https://github.com/r9y9/gantts">Github Link</a>
           </h3>
+          <h3 style="text-indent:1em">3.Structure
+            <img src="source/gansystem.PNG" width="640">
+          </h3>
 
       <div class="page-header">
         <h1>3.WaveNet<small></small></h1>
